--- a/SZStorage/SZStorage/Classes/LoginRegister/ForgetPassword/ResetPassword/Controller/SZResetPasswordController.xib
+++ b/SZStorage/SZStorage/Classes/LoginRegister/ForgetPassword/ResetPassword/Controller/SZResetPasswordController.xib
@@ -31,10 +31,9 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTx-5r-th0">
-                            <rect key="frame" x="10" y="22" width="33" height="32"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <state key="normal" title="返回">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTx-5r-th0">
+                            <rect key="frame" x="10" y="32" width="13" height="22"/>
+                            <state key="normal" image="icon_顶部栏_返回">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
@@ -91,11 +90,11 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ykE-15-ZCQ">
                     <rect key="frame" x="38" y="363" width="300" height="44"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_注册_密码" translatesAutoresizingMaskIntoConstraints="NO" id="JdG-rQ-beA">
-                            <rect key="frame" x="0.0" y="14" width="18" height="20"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_注册_密码确认" translatesAutoresizingMaskIntoConstraints="NO" id="JdG-rQ-beA">
+                            <rect key="frame" x="0.0" y="12" width="21" height="22"/>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="确认密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zdH-dH-Ub6">
-                            <rect key="frame" x="48" y="14" width="242" height="20"/>
+                            <rect key="frame" x="51" y="13" width="239" height="20"/>
                             <color key="textColor" red="0.13725490200000001" green="0.54901960780000003" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -162,6 +161,8 @@
     </objects>
     <resources>
         <image name="icon_注册_密码" width="18" height="20"/>
+        <image name="icon_注册_密码确认" width="21" height="22"/>
         <image name="icon_速致仓储logo" width="90" height="90"/>
+        <image name="icon_顶部栏_返回" width="13" height="22"/>
     </resources>
 </document>
