--- a/SZStorage/SZStorage/Classes/LoginRegister/Register/Password/Controller/SZPasswordViewController.xib
+++ b/SZStorage/SZStorage/Classes/LoginRegister/Register/Password/Controller/SZPasswordViewController.xib
@@ -90,11 +90,11 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pze-iN-zUT">
                     <rect key="frame" x="38" y="363" width="300" height="44"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_注册_密码" translatesAutoresizingMaskIntoConstraints="NO" id="MJM-Qa-4Yf">
-                            <rect key="frame" x="0.0" y="14" width="18" height="20"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_注册_密码确认" translatesAutoresizingMaskIntoConstraints="NO" id="MJM-Qa-4Yf">
+                            <rect key="frame" x="0.0" y="12" width="21" height="22"/>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="确认密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IWb-5H-TzO">
-                            <rect key="frame" x="48" y="14" width="242" height="20"/>
+                            <rect key="frame" x="51" y="13" width="239" height="20"/>
                             <color key="textColor" red="0.13725490200000001" green="0.54901960780000003" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" keyboardType="phonePad" secureTextEntry="YES"/>
@@ -161,6 +161,7 @@
     </objects>
     <resources>
         <image name="icon_注册_密码" width="18" height="20"/>
+        <image name="icon_注册_密码确认" width="21" height="22"/>
         <image name="icon_速致仓储logo" width="90" height="90"/>
         <image name="icon_顶部栏_返回" width="13" height="22"/>
     </resources>
