--- a/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/Controller/SZInputController.xib
+++ b/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/Controller/SZInputController.xib
@@ -11,10 +11,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SZInputController">
             <connections>
+                <outlet property="contentView" destination="tV6-BV-PMO" id="ttD-1w-w4M"/>
                 <outlet property="orderBtn" destination="mNL-hj-IoZ" id="Gaj-EU-Y2X"/>
                 <outlet property="searchView" destination="WLh-6r-gdv" id="f7a-LE-eh9"/>
                 <outlet property="selectBtn" destination="UJG-Vj-aRC" id="LKS-92-aE9"/>
                 <outlet property="sortKind" destination="SQc-aX-wgK" id="QZp-3C-4VB"/>
+                <outlet property="sureInputBtn" destination="s0t-YZ-iix" id="g2Q-g0-eE6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -77,15 +79,50 @@
                         <constraint firstAttribute="height" constant="44" id="SCb-kB-bwA"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9fV-sO-Let">
+                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0t-YZ-iix">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <color key="backgroundColor" red="0.22352941176470587" green="0.59215686274509804" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <state key="normal" title="确认入库(共1种)">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="sureInputBtnClick" destination="-1" eventType="touchUpInside" id="RYH-VB-cwL"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="s0t-YZ-iix" secondAttribute="bottom" id="43o-62-ybf"/>
+                        <constraint firstItem="s0t-YZ-iix" firstAttribute="leading" secondItem="9fV-sO-Let" secondAttribute="leading" id="H1m-56-5Sh"/>
+                        <constraint firstItem="s0t-YZ-iix" firstAttribute="top" secondItem="9fV-sO-Let" secondAttribute="top" id="MKV-DW-qbm"/>
+                        <constraint firstAttribute="height" constant="44" id="ubq-9V-iNB"/>
+                        <constraint firstAttribute="trailing" secondItem="s0t-YZ-iix" secondAttribute="trailing" id="znw-VB-HuD"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tV6-BV-PMO">
+                    <rect key="frame" x="0.0" y="99" width="375" height="524"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="9fV-sO-Let" secondAttribute="trailing" id="5Nk-Or-UHZ"/>
                 <constraint firstItem="SQc-aX-wgK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Cmc-HB-F0c"/>
                 <constraint firstAttribute="trailing" secondItem="SQc-aX-wgK" secondAttribute="trailing" id="FON-hD-7Me"/>
+                <constraint firstItem="tV6-BV-PMO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IXU-Dm-rY3"/>
                 <constraint firstItem="WLh-6r-gdv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="KOm-Xg-ZQX"/>
+                <constraint firstItem="tV6-BV-PMO" firstAttribute="top" secondItem="SQc-aX-wgK" secondAttribute="bottom" constant="1" id="PRZ-HO-AOs"/>
                 <constraint firstAttribute="trailing" secondItem="WLh-6r-gdv" secondAttribute="trailing" id="TeP-6m-DwN"/>
+                <constraint firstAttribute="trailing" secondItem="tV6-BV-PMO" secondAttribute="trailing" id="Vq5-rX-GX4"/>
                 <constraint firstItem="SQc-aX-wgK" firstAttribute="top" secondItem="WLh-6r-gdv" secondAttribute="bottom" constant="10" id="WSq-aW-uZW"/>
+                <constraint firstItem="9fV-sO-Let" firstAttribute="top" secondItem="tV6-BV-PMO" secondAttribute="bottom" id="bHA-fb-VQ5"/>
+                <constraint firstItem="9fV-sO-Let" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bQU-PD-XcV"/>
                 <constraint firstItem="WLh-6r-gdv" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="i6p-a3-SOs"/>
+                <constraint firstAttribute="bottom" secondItem="9fV-sO-Let" secondAttribute="bottom" id="qEa-Wm-Kt1"/>
             </constraints>
             <point key="canvasLocation" x="24.5" y="52.5"/>
         </view>
