--- a/SZStorage/SZStorage/Classes/GoodsOutput(商品出库)/View/SZOutputCell.xib
+++ b/SZStorage/SZStorage/Classes/GoodsOutput(商品出库)/View/SZOutputCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="141" id="KGk-i7-Jjw" customClass="SZOutputCell">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="cell" selectionStyle="default" indentationWidth="10" rowHeight="141" id="KGk-i7-Jjw" customClass="SZOutputCell">
             <rect key="frame" x="0.0" y="0.0" width="351" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -104,6 +104,6 @@
         <image name="icon_商品出库_价格" width="13" height="14"/>
         <image name="icon_商品出库_库存" width="13" height="13"/>
         <image name="icon_商品出库_更多" width="8" height="12"/>
-        <image name="panshiyu" width="640" height="853"/>
+        <image name="panshiyu" width="320" height="426"/>
     </resources>
 </document>
