--- a/SZStorage/SZStorage/Classes/Manager(管理)/StaffManager(员工管理)/VerifiingStaff(待审核员工)/View/SZWillVerifStaffCell.xib
+++ b/SZStorage/SZStorage/Classes/Manager(管理)/StaffManager(员工管理)/VerifiingStaff(待审核员工)/View/SZWillVerifStaffCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="tct-Z3-iA8" customClass="SZWillVerifStaffCell">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="cell" selectionStyle="default" indentationWidth="10" rowHeight="70" id="tct-Z3-iA8" customClass="SZWillVerifStaffCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tct-Z3-iA8" id="apj-rI-vn3">
