--- a/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/NewAddGoods(新增商品)/Color/View/SZColorCell.xib
+++ b/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/NewAddGoods(新增商品)/Color/View/SZColorCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="color" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SZColorCell">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="color" selectionStyle="default" indentationWidth="10" reuseIdentifier="color" id="KGk-i7-Jjw" customClass="SZColorCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -27,8 +27,18 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_商品出库_筛选_打勾" translatesAutoresizingMaskIntoConstraints="NO" id="VZA-f6-Rle">
                         <rect key="frame" x="280" y="12" width="20" height="20"/>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="icl-d9-Ulw">
+                        <rect key="frame" x="0.0" y="42.5" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.69411764705882351" green="0.69411764705882351" blue="0.69411764705882351" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="rIe-2c-7H2"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="icl-d9-Ulw" secondAttribute="bottom" id="BN5-8B-I53"/>
+                    <constraint firstItem="icl-d9-Ulw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Enz-tz-K7S"/>
+                    <constraint firstAttribute="trailing" secondItem="icl-d9-Ulw" secondAttribute="trailing" id="Pka-AN-TVn"/>
                     <constraint firstItem="VZA-f6-Rle" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="RPS-3e-XsN"/>
                     <constraint firstItem="Sxa-4A-5rf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="VX9-cC-cq2"/>
                     <constraint firstAttribute="trailing" secondItem="VZA-f6-Rle" secondAttribute="trailing" constant="20" id="eqs-Nk-DTS"/>
