--- a/SZStorage/SZStorage/Classes/Manager(管理)/GoodsManager(商品管理)/Controller/SZGoodsManagerController.xib
+++ b/SZStorage/SZStorage/Classes/Manager(管理)/GoodsManager(商品管理)/Controller/SZGoodsManagerController.xib
@@ -11,39 +11,99 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SZGoodsManagerController">
             <connections>
-                <outlet property="searchView" destination="psx-5M-BB3" id="LP2-j9-6MS"/>
-                <outlet property="view" destination="pgN-GI-zLB" id="W4N-oh-61E"/>
+                <outlet property="orderBtn" destination="6wo-mH-a4H" id="NA3-1R-Ft2"/>
+                <outlet property="searchView" destination="wAc-R1-9AC" id="kwS-Gk-Y4O"/>
+                <outlet property="selectBtn" destination="01p-Sv-kaI" id="8w7-eP-4li"/>
+                <outlet property="sortKind" destination="p3w-pP-z8j" id="moH-cw-zQA"/>
+                <outlet property="view" destination="iN0-l3-epB" id="Vhd-Ps-TJC"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="pgN-GI-zLB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xcB-Zk-pl0" customClass="SZBaseTableView">
-                    <rect key="frame" x="67" y="243" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="AIG-hH-w6P"/>
-                        <outlet property="delegate" destination="-1" id="oDp-2K-3C2"/>
-                    </connections>
-                </tableView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="psx-5M-BB3">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wAc-R1-9AC">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="44" id="Sah-8K-CKi"/>
+                        <constraint firstAttribute="height" constant="44" id="19u-iO-LbF"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p3w-pP-z8j">
+                    <rect key="frame" x="0.0" y="54" width="375" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6wo-mH-a4H" customClass="SZSortKindButton">
+                            <rect key="frame" x="0.0" y="0.0" width="187.5" height="44"/>
+                            <state key="normal" title="库存" image="Triangle">
+                                <color key="titleColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <state key="selected" image="Triangle-选中"/>
+                            <connections>
+                                <action selector="orderBtnClick" destination="-1" eventType="touchUpInside" id="R6v-LY-TfG"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="01p-Sv-kaI" customClass="SZSortKindButton">
+                            <rect key="frame" x="187.5" y="0.0" width="187.5" height="44"/>
+                            <state key="normal" title="筛选" image="Triangle">
+                                <color key="titleColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <state key="selected" image="Triangle-选中"/>
+                            <connections>
+                                <action selector="selectBtnClick" destination="-1" eventType="touchUpInside" id="wMi-F2-g4O"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WCs-1w-D0B">
+                            <rect key="frame" x="187" y="3" width="1" height="38"/>
+                            <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="1" id="OYe-hr-b2I"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="01p-Sv-kaI" secondAttribute="trailing" id="0ux-RB-tAf"/>
+                        <constraint firstItem="01p-Sv-kaI" firstAttribute="top" secondItem="p3w-pP-z8j" secondAttribute="top" id="1X4-R6-t9i"/>
+                        <constraint firstAttribute="bottom" secondItem="6wo-mH-a4H" secondAttribute="bottom" id="6f4-fG-iAg"/>
+                        <constraint firstItem="WCs-1w-D0B" firstAttribute="top" secondItem="p3w-pP-z8j" secondAttribute="top" constant="3" id="Ase-v8-nRj"/>
+                        <constraint firstAttribute="height" constant="44" id="R5k-Lx-9MO"/>
+                        <constraint firstItem="WCs-1w-D0B" firstAttribute="centerX" secondItem="p3w-pP-z8j" secondAttribute="centerX" id="T3m-QQ-Ufp"/>
+                        <constraint firstItem="6wo-mH-a4H" firstAttribute="height" secondItem="01p-Sv-kaI" secondAttribute="height" id="aHh-S9-iwj"/>
+                        <constraint firstItem="6wo-mH-a4H" firstAttribute="leading" secondItem="p3w-pP-z8j" secondAttribute="leading" id="dss-td-d44"/>
+                        <constraint firstItem="6wo-mH-a4H" firstAttribute="top" secondItem="p3w-pP-z8j" secondAttribute="top" id="e8j-c3-kOm"/>
+                        <constraint firstAttribute="bottom" secondItem="WCs-1w-D0B" secondAttribute="bottom" constant="3" id="gM9-QL-hiI"/>
+                        <constraint firstItem="01p-Sv-kaI" firstAttribute="leading" secondItem="6wo-mH-a4H" secondAttribute="trailing" id="hpy-8a-9dc"/>
+                        <constraint firstAttribute="bottom" secondItem="01p-Sv-kaI" secondAttribute="bottom" id="inL-SL-NMa"/>
+                        <constraint firstItem="6wo-mH-a4H" firstAttribute="width" secondItem="01p-Sv-kaI" secondAttribute="width" id="nT2-TM-oJv"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sqn-c5-dMp" customClass="SZBaseTableView">
+                    <rect key="frame" x="0.0" y="99" width="375" height="568"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="aXs-Cf-7jU"/>
+                        <outlet property="delegate" destination="-1" id="exU-MR-NZU"/>
+                    </connections>
+                </tableView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="psx-5M-BB3" secondAttribute="trailing" id="gMn-cG-RdG"/>
-                <constraint firstItem="psx-5M-BB3" firstAttribute="top" secondItem="pgN-GI-zLB" secondAttribute="top" id="l8l-Pa-ppK"/>
-                <constraint firstItem="psx-5M-BB3" firstAttribute="leading" secondItem="pgN-GI-zLB" secondAttribute="leading" id="zmU-8R-cB5"/>
+                <constraint firstItem="sqn-c5-dMp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="1Zp-pr-2KY"/>
+                <constraint firstItem="p3w-pP-z8j" firstAttribute="top" secondItem="wAc-R1-9AC" secondAttribute="bottom" constant="10" id="8B1-Ga-cXL"/>
+                <constraint firstItem="wAc-R1-9AC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="CI7-X3-CFz"/>
+                <constraint firstAttribute="trailing" secondItem="sqn-c5-dMp" secondAttribute="trailing" id="LyV-qc-yFS"/>
+                <constraint firstAttribute="bottom" secondItem="sqn-c5-dMp" secondAttribute="bottom" id="MD6-Mr-uG5"/>
+                <constraint firstItem="p3w-pP-z8j" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="TRC-vt-D9x"/>
+                <constraint firstItem="wAc-R1-9AC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="aIe-fN-EKL"/>
+                <constraint firstAttribute="trailing" secondItem="p3w-pP-z8j" secondAttribute="trailing" id="uRI-Ia-GdJ"/>
+                <constraint firstAttribute="trailing" secondItem="wAc-R1-9AC" secondAttribute="trailing" id="zQ3-Nd-k2F"/>
+                <constraint firstItem="sqn-c5-dMp" firstAttribute="top" secondItem="p3w-pP-z8j" secondAttribute="bottom" constant="1" id="zcX-2G-JDF"/>
             </constraints>
-            <point key="canvasLocation" x="39" y="13"/>
         </view>
     </objects>
+    <resources>
+        <image name="Triangle" width="8" height="6"/>
+        <image name="Triangle-选中" width="8" height="6"/>
+    </resources>
 </document>
